# reaper-mcp

./: .mcp.json  README.md  manifest.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
scythe/: __init__.py  __main__.py  server.py
scythe/tools/: actions.py  devices.py  envelopes.py  ext_state.py  items.py  markers.py  midi.py  project.py  render.py  sends.py  take_fx.py  tempo.py  time_selection.py  track_fx.py  tracks.py
