[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scythe"
version = "0.1.0"
description = "Scythe — give Claude full control of REAPER DAW"
requires-python = ">=3.12"
dependencies = [
    "python-reapy>=0.10.0",
    "fastmcp>=3.0.0",
]

[project.scripts]
scythe = "scythe.__main__:main"
